Fix footer logo stretch

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -47,3 +47,7 @@
   font-family: $font-sans;
   font-size: $h4-font-size;
 }
+
+.usa-footer-logo-img {
+  height: 100%;
+}
